tests/baselines/reference/privateNameJsx.errors.txt
privateNameJsx.tsx(4,27): error TS1003: Identifier expected.


==== privateNameJsx.tsx (1 errors) ====
    class Test {
        #prop = () => <div />;
        render() {
            return <this.#prop />;
                              
!!! error TS1003: Identifier expected.
        }
    }
    
    